fix: more contrast on cta

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
   --secondary-color: #be7526;
   --secondary-color-40: #d5c0a5;
   --secondary-color-20: #ebdfd3;
-  --accent-color-1: #9cbd2c;
+  --accent-color-1: #7e9a21; /* originalmente: #9cbd2c; cambiado por accesibilidad*/
   --accent-color-2: #dfb967;
   --accent-color-2-30: #f5ead1;
 }
@@ -94,6 +94,7 @@ option {
   display: block;
   background-color: var(--accent-color-1);
   font-family: "Oswald", sans-serif;
+  font-size: 1.2rem;
   color: #fff;
   text-align: center;
   width: 106px;
